--- a/第6回資料/ランダムフォレスト.md
+++ b/第6回資料/ランダムフォレスト.md
@@ -1,2 +1,10 @@
-* ランダムフォレスト  
+# 内容
+
+* 日時：5月16日（土）10時 - 12時
+* 内容
+  * ランダムフォレストの理論と実装（清野）
+  * k-最近傍法の理論と実装（古川）
+  * LT(日沢）
+
+* ランダムフォレストブログまとめ
 [【さきどりPython#6】ランダムフォレストで学ぶアンサンブル学習](https://bdarc.net/to-learn-basis-of-random-forest/)
