--- a/第7回資料/サポートベクタマシン.md
+++ b/第7回資料/サポートベクタマシン.md
@@ -1,2 +1,11 @@
-* サポートベクターマシンの解説資料  
-[【さきどりPython#7】scikit-learnでサポートベクターマシンの基礎を学ぼう](https://bdarc.net/support-vector-machin-basis/)
+# 【第7回】さきどりPython
+
+* 日時：5月21日10時-12時
+* 内容
+* ロジスティック回帰（日沢）
+  * 16_ロジスティック回帰.ipynb
+  * クック16.ロジスティック回帰.pptx
+* サポートベクターマシン（清野）
+  * 第17章サポートベクターマシン.ipynb
+  * [【さきどりPython#7】scikit-learnでサポートベクターマシンの基礎を学ぼう](https://bdarc.net/support-vector-machin-basis/)
+* LT：確率密度関数の期待値と分散（村山）
